--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 # Icon must end with two \r
 Icon
 
-
 # Thumbnails
 ._*
 
@@ -65,3 +64,7 @@ sysinfo.txt
 
 # Unity Video Recordings (default path)
 Recordings/
+
+# Cinema 4D cache files
+*.gil
+substance_cache/
