--- a/.gitattributes
+++ b/.gitattributes
@@ -4,7 +4,10 @@
 *.meta linguist-generated
 *.prefab linguist-generated
 *.unity linguist-generated
+
 ## git-lfs ##
+# Unity HDRP lighting data
+LightingData.asset filter=lfs diff=lfs merge=lfs -text
 # Image
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
@@ -49,4 +52,3 @@
 *.rns filter=lfs diff=lfs merge=lfs -text
 *.reason filter=lfs diff=lfs merge=lfs -text
 *.lxo filter=lfs diff=lfs merge=lfs -text
-LightingData.asset filter=lfs diff=lfs merge=lfs -text
